--- a/Com.Ericmas001.MvvmCore/Com.Ericmas001.MvvmCore.csproj
+++ b/Com.Ericmas001.MvvmCore/Com.Ericmas001.MvvmCore.csproj
@@ -5,7 +5,7 @@
     <UseWPF>true</UseWPF>
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.1</Version>
+    <Version>7.0.0</Version>
     <Authors>Ericmas001</Authors>
     <Description>Com.Ericmas001.MvvmCore</Description>
     <Copyright>Ericmas001</Copyright>
@@ -19,6 +19,11 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="_Nuget\icon.png" Pack="true" PackagePath="" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Com.Ericmas001.DependencyInjection" Version="6.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
