--- a/Com.Ericmas001.Mvvm/Com.Ericmas001.Mvvm.csproj
+++ b/Com.Ericmas001.Mvvm/Com.Ericmas001.Mvvm.csproj
@@ -47,17 +47,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Behaviors\BindableSelectedItemBehavior.cs" />
-    <Compile Include="Collections\FastObservableCollection.cs" />
     <Compile Include="ControlExtensions\TextBoxScrollToEndExtension.cs" />
     <Compile Include="Extensions\DependencyObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModelBase.cs" />
-    <Compile Include="RelayCommand.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Com.Ericmas001.DependencyInjection">
+      <Version>6.1.2</Version>
+    </PackageReference>
     <PackageReference Include="Expression.Blend.Sdk">
       <Version>1.0.2</Version>
     </PackageReference>
   </ItemGroup>
+  <Import Project="..\Com.Ericmas001.Mvvm.Shared\Com.Ericmas001.Mvvm.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
