--- a/Com.Ericmas001.MvvmCore/Com.Ericmas001.MvvmCore.csproj
+++ b/Com.Ericmas001.MvvmCore/Com.Ericmas001.MvvmCore.csproj
@@ -3,27 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWPF>true</UseWPF>
-
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>7.3.0</Version>
-    <Authors>Ericmas001</Authors>
-    <Description>Com.Ericmas001.MvvmCore</Description>
-    <Copyright>Ericmas001</Copyright>
-    <PackageReleaseNotes>Development Version</PackageReleaseNotes>
-    <PackageIcon>icon.png</PackageIcon>
-    <PackageIconUrl>https://github.com/Com-Ericmas001/Common/raw/master/Resources/lib.png</PackageIconUrl>
-    <PackageProjectUrl>https://github.com/Com-Ericmas001/Mvvm</PackageProjectUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <NeutralLanguage>en</NeutralLanguage>
+    <AssemblyName>Com.Ericmas001.Mvvm</AssemblyName>
+    <RootNamespace>Com.Ericmas001.Mvvm</RootNamespace>
   </PropertyGroup>
-  <ItemGroup>
-    <None Include="_Nuget\icon.png" Pack="true" PackagePath="" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Com.Ericmas001.DependencyInjection" Version="6.1.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.0.0" />
   </ItemGroup>
+
+  <Import Project="..\Com.Ericmas001.Mvvm.Shared\Com.Ericmas001.Mvvm.Shared.projitems" Label="Shared" />
 
 </Project>
